# ros-tracking-nodes-policy-examples

./: .gitignore  .gitmodules  README.md  sample.config
example_tracker/: CMakeLists.txt  package.xml
example_tracker/src/: main.cpp
src/example_policy/: CMakeLists.txt  package.xml
src/example_policy/src/example_tracker/: main.cpp
src/example_tracker/: main.cpp
